--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <Button
             android:id="@+id/firstUser"
@@ -31,14 +32,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewContainer"
         android:layout_width="match_parent"
-        android:layout_height="580dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:overScrollMode="never"
+        android:layout_weight="8"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <EditText
             android:id="@+id/editText"
@@ -46,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:layout_weight="0.75"
+            android:layout_weight="7"
             android:autofillHints="Enter text ..." />
 
         <Button
@@ -55,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:layout_weight="0.25"
+            android:layout_weight="3"
             android:text="Send" />
     </LinearLayout>
 
