--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
+            android:backgroundTint="#2196F3"
             android:text="User1" />
 
         <Button
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
+            android:backgroundTint="#2196F3"
             android:text="User2" />
     </LinearLayout>
 
@@ -33,9 +35,9 @@
         android:id="@+id/recyclerViewContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="8"
         android:orientation="vertical"
         android:overScrollMode="never"
-        android:layout_weight="8"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <LinearLayout
@@ -59,6 +61,7 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:layout_weight="3"
+            android:backgroundTint="#2196F3"
             android:text="Send" />
     </LinearLayout>
 
