--- a/app/src/main/res/layout/item_first_message.xml
+++ b/app/src/main/res/layout/item_first_message.xml
@@ -9,12 +9,12 @@
         android:id="@+id/firstUserMessageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
+        android:background="#009688"
         android:paddingLeft="16dp"
         android:textSize="20dp"
         android:paddingRight="16dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="First user" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
